Adding background image/styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <h2 class="logo">Johnathan Wu</h2>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#hero">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <section id="home" class="profile">
+        <section id="hero" class="profile">
             <img src="images/upperbody2_square.jpg" alt="photo of Johnathan in suit">
             <h2>Hello, I'm Johnathan</h2>
             <p>I'm a high school student who is passionate about data analysis, science, and saxophone.</p>
